# sdk-python

./: README.md  codegen.yaml  pyproject.toml
.github/workflows/: ci.yml
src/routra/: __init__.py  _client.py  _types.py  management.py
