[project]
name = "routra"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Asman Mirza", email = "rambo007.am@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
