[project]
name = "routra"
version = "0.1.1"
description = "Routra Python SDK - OpenAI-compatible client with intelligent multi-provider routing"
readme = "README.md"
authors = [
    { name = "Asman Mirza", email = "rambo007.am@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.30.0",
]

[build-system]
requires = ["uv_build>=0.9.16,<0.10.0"]
build-backend = "uv_build"
